Changed some text

--- a/html_css/popup.html
+++ b/html_css/popup.html
@@ -15,7 +15,7 @@
                 <ul style="list-style: disc">
                     <li><p class="text-2">Right click on any website</p></li>
                     <li><p class="text-2">Click "<b>Activate Styling</b>"</p></li>
-                    <li><span class="text-2">Click any element while pressing </span><span class="font-mono text-2">ctrl</span></li>
+                    <li><span class="text-2">Click any element while pressing </span><span class="font-mono text-2">ctrl</span> or <span class="font-mono text-2">cmd</span></li>
                     <li><p class="text-2">Change its style</p></li>
                 </ul>   
             </div>        
