--- a/html_css/popup.html
+++ b/html_css/popup.html
@@ -15,15 +15,15 @@
                 <ul style="list-style: disc">
                     <li><p class="text-2">Right click on any website</p></li>
                     <li><p class="text-2">Click "<b>Activate Styling</b>"</p></li>
-                    <li><span class="text-2">Click any element while pressing </span><span class="font-mono text-2">ctrl</span> or <span class="font-mono text-2">cmd</span></li>
+                    <li><span class="text-2">Click any element while pressing  </span><span class="font-mono text-2">ctrl</span> <span class="text-2">  or  </span><span class="font-mono text-2">cmd</span></li>
                     <li><p class="text-2">Change its style</p></li>
                 </ul>   
             </div>        
             <div>
             <br><br> 
-                <small class="font-semibold text-overlay2"><a href="https://github.com/Qwatrum/stylewizard" target="_blank1">Repository</a></small>
+                <small class="font-semibold text-overlay2"><a href="https://github.com/Qwatrum/stylewizard" target="_blank">Repository</a></small>
                 <span aria-hidden="true">/</span>
-                <small class="font-semibold text-overlay2"><a href="https://github.com/Qwatrum" target="_blank2">Qwatrum</a></small>
+                <small class="font-semibold text-overlay2"><a href="https://github.com/Qwatrum" target="_blank">Qwatrum</a></small>
             </div>
                 
         </main>
